# idx-fundamental-analysis

./: .env.example  .gitignore  README.md  build_sector_cache.py  conftest.py  main.py  orchestrator.py  pyproject.toml  run_api.py  run_debate.py  run_quant_filter.py  run_ui.sh  test_debate_single.py  test_exdate_quick.py
.agent/rules/: idx-fundamental-rules.md
.windsurf/rules/: idx-fundamental-rules.md
app/api/: main.py
app/ui/: bun.lockb  package.json
builders/: database_builder.py  excel.py
builders/analysers/: __init__.py  fundamental_analyser.py  key_analysis_analyser.py  sentiment_analyser.py  stock_price_analyser.py
core/: budget.py  registrar.py  settings.py
db/: __init__.py  session.py
db/models/: __init__.py  stock.py
output/: full_batch_results.json  sector_cache.json  top10_candidates.json
output/debates/: BBCA_debate.json  BBRI_debate.json  TLKM_debate.json  adro_debate.json  wbsa_debate.json
providers/: gemini.py  idx.py  stockbit.py
repositories/: __init__.py  base.py  fundamental_repository.py  key_analysis_repository.py  sentiment_repository.py  stock_price_repository.py  stock_repository.py
schemas/: __init__.py  builder.py  cio_verdict_swing.json  debate.py  fundamental.py  key_analysis.py  sentiment.py  stock.py  stock_price.py
scratch/: inspect_excel.py  report.md
services/: debate_chamber.py  fair_value_calculator.py  stockbit_api_client.py  stockbit_token_fetcher.py
tests/: conftest.py  test_debate_chamber_hardening.py  test_debate_schemas.py  test_fair_value_calculator.py  test_orchestrator.py  test_orchestrator_scoring.py  test_technicals.py
tests/api/: test_additional_routers.py  test_health.py
tests/builders/: test_analysers_and_builder.py
tests/models/: test_stock_factory.py
tests/services/: test_debate_chamber.py  (+4 more)
utils/: exdate_scanner.py  helpers.py  logger_config.py  price_fetcher.py  serializers.py  technicals.py
(+18 files in other folders)
