[tool.poetry]
name = "idx-fundamental"
version = "0.1.0"
description = "IDX Composite Fundamental Analysis"
authors = ["Satrya Budi Pratama"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
requests = "^2.32.0"
babel = "^2.15.0"
google-api-python-client = "^2.137.0"
python-dotenv = "^1.0.1"
yfinance = { extras = ["nospam", "repair"], version = "^0.2.40" }
pandas-datareader = "^0.10.0"
openpyxl = "^3.1.5"
crawl4ai = "^0.3.4"
phidata = "^2.4.42"
ollama = "^0.3.3"
sqlalchemy = "^2.0.35"
selenium-wire = "^5.1.0"
blinker = "<1.8.0"
setuptools = "^80.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
